trunk/Archive2/6c/3decc02832b83e/output
main.cpp: In function 'int main()':
main.cpp:11:7: warning: unused variable 'v' [-Wunused-variable]
     b v;
       ^
main.cpp:11:7: error: size of variable 'v' is too large
